se modifca la conexión y se agrega el script de base

--- a/php/config/config
+++ b/php/config/config
@@ -1,6 +1,6 @@
 {
     "conexion":{
-        "server" : "mysql:host=localhost; dbname=prueba",
+        "server" : "mysql:host=localhost; dbname=ug_base_php",
         "user" : "root",
         "password" : ""
     }
